--- a/inapp_survey/templates/inapp_survey/index.html
+++ b/inapp_survey/templates/inapp_survey/index.html
@@ -33,11 +33,15 @@
     box-shadow: 0px 0px 5px rgba(0, 68, 69, 0.3) !important;
     z-index: 99999 !important;
     color: #fff !important;
-    font-family: Montserrat !important;
+    font-family: "Source Sans Pro";
     font-size: 16px !important;
     line-height: 24px !important;
     min-height: 63px;
     overflow: auto !important;
+  }
+
+  .django-inapp-survey-wrapper * {
+    font-family: "Source Sans Pro";
   }
 
   .django-inapp-survey-wrapper h3 {
@@ -293,16 +297,7 @@
       isAuthenticated: '{{user.is_authenticated|yesno}}'==='yes'
   };
 </script>
-<script>
-  // To check background MATCH
-  setInterval(
-    function () {
-      var randomColor = Math.floor(Math.random() * 16777215).toString(16);
-      document.body.style.backgroundColor = "#" + randomColor;
-    }, 1000);
-
-</script>
-
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/static/bower_components/components-font-awesome/css/font-awesome.min.css"></link>
 <script>window.showdown || document.write('<script src="/static/bower_components/showdown/dist/showdown.min.js">\x3C/script>');</script>
 <script src="/static/javascript/extended-markdown.js"></script>
